fix hidden issues on mobile

--- a/assets/sass/components/_state.scss
+++ b/assets/sass/components/_state.scss
@@ -1,10 +1,6 @@
 // State pages
 
 .state {
-  .i-bar {
-    display: none;
-  }
-
   @media screen and (max-width: 40rem) {
     .i-hidden-bar {
       display: block;
